# music-news-radar

./: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  digest.yml  pipeline.yml
alembic/: env.py
alembic/versions/: 0001_create_core_tables.py  0002_add_alerted_at.py  0003_add_source_state.py  0004_add_mentioned_artists.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: articles.py  digests.py  sources.py
app/delivery/: digest.py  discord.py  email.py
app/delivery/templates/: digest.html.j2
app/pipeline/: dedup.py  ingest.py  radar.py  retention.py  run.py  scoring.py
app/sources/: __init__.py  base.py  reddit_rss.py  rss.py  x_api.py  x_apify.py
app/static/: dashboard.html
deploy/: com.musicnewsradar.digest.plist  com.musicnewsradar.pipeline.plist  install_launchd.sh
scripts/: add_source.py  run_ingest.py  run_pipeline.py  score_articles.py  send_digest.py  send_hot_alerts.py
tests/: conftest.py  test_api.py  test_dedup.py  test_digest.py  test_discord.py  test_ingest.py  test_pipeline.py  test_radar.py  test_retention.py  test_scoring.py
tests/test_sources/: test_reddit_rss.py  test_registry.py  test_rss.py  test_x_api.py  test_x_apify.py
