[project]
name = "music-news-radar"
version = "0.1.0"
description = "Veille automatisée actu musique électronique — agrégation, scoring Claude, digest mail + alertes Discord"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "feedparser>=6.0",
    "httpx>=0.27",
    "anthropic>=0.79",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
